# cyberdash

./: LICENSE  README.md  cyberdash.sh  pyproject.toml
data/: cyberdash.desktop
scripts/: install.sh
src/cyberdash/: __init__.py  __main__.py  main.py
src/cyberdash/app/views/: clipboard_view.py  emoji_view.py  pinned_view.py  settings_view.py  stickers_view.py  translator_view.py
src/cyberdash/services/: clipboard_manager.py  emoji_data.py  hotkey_manager.py  translator_service.py
src/cyberdash/utils/: config.py
styles/: main.css
