[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cyberdash"
version = "1.0.0"
description = "CyberDash - Advanced Emoji Picker & Tools for Linux (Cyberpunk Style)"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your@email.com"}
]
requires-python = ">=3.10"
dependencies = [
    "gi>=1.0",
    "requests>=2.28.0",
    "keyboard>=0.13.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "mypy>=1.0",
]

[project.scripts]
cyberdash = "cyberdash.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cyberdash = ["data/*.json", "styles/*.css"]
